--- a/bot/package.json
+++ b/bot/package.json
@@ -5,10 +5,13 @@
   "main": "server.js",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "node-telegram-bot-api": "^0.40.0"
+    "mongoose": "^5.8.3",
+    "node-telegram-bot-api": "^0.40.0",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {},
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "developer.0112358@gmail.com",
