--- a/bot/package.json
+++ b/bot/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "dependencies": {
     "dotenv": "^8.2.0",
     "mongoose": "^5.8.3",
@@ -11,7 +12,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon --experimental-modules server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "developer.0112358@gmail.com",
