made strapi admin for adding new words

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,34 @@
-version: "3.5"
+version: "3.7"
 services:
   bot:
     build: ./bot/
     container_name: bot
+    volumes:
+      - ./bot:/usr/src/app
     restart: always
-    command:
-      "node server.js"
-    expose:
-      - 8080
+    ports:
+      - 3000:3000
     depends_on:
       - mongo
+    environment:
+      - MONGO_LOCAL_CONN_URL=mongodb://mongo:27017/wakaiyama
+  admin:
+    container_name: admin
+    image: strapi/strapi
+    ports:
+      - "1337:1337"
+    volumes:
+      - ./admin:/srv/app
+    depends_on:
+      - mongo
+    environment:
+      - DATABASE_CLIENT=mongo
+      - DATABASE_HOST=mongo
+      - DATABASE_PORT=27017
+      - DATABASE_NAME=wakaiyama
+      - DATABASE_USERNAME=
+      - DATABASE_PASSWORD=
+      - DATABASE_AUTHENTICATION_DATABASE=strapi
   mongo:
     image: mongo:latest
     volumes:
