--- a/bot/package.json
+++ b/bot/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "type": "module",
   "dependencies": {
+    "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "mongoose": "^5.8.3",
     "node-telegram-bot-api": "^0.40.0",
@@ -12,7 +13,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "nodemon --experimental-modules server.js",
+    "dev": "cross-env NODE_ENV=development nodemon --experimental-modules server.js",
+    "start": "cross-env NODE_ENV=production nodemon --experimental-modules server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "developer.0112358@gmail.com",
