--- a/bot/package.json
+++ b/bot/package.json
@@ -8,8 +8,8 @@
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "mongoose": "^5.8.3",
-    "node-telegram-bot-api": "^0.40.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "telegraf": "^3.35.0"
   },
   "devDependencies": {},
   "scripts": {
