--- a/admin/api/alfabets/models/Alfabets.settings.json
+++ b/admin/api/alfabets/models/Alfabets.settings.json
@@ -20,6 +20,10 @@
     "katakana": {
       "unique": true,
       "type": "string"
+    },
+    "hiragana": {
+      "unique": true,
+      "type": "string"
     }
   }
 }
