added menu for select user lang and japanese version

--- a/admin/api/botusers/models/Botusers.settings.json
+++ b/admin/api/botusers/models/Botusers.settings.json
@@ -40,6 +40,11 @@
     },
     "study": {
       "type": "json"
+    },
+    "selected_lang": {
+      "default": "en",
+      "required": true,
+      "type": "string"
     }
   }
 }
